--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">MainActivity</string>
-    <string name="tracking_name">TrackingActivity</string>
+    <string name="app_name">Crank</string>
+    <string name="tracking_name">Tracking Activity</string>
     <string name="tracking_title">Tracking...</string>
     <string name="hello_world">Hello, from Crank</string>
     <string name="button_track">Track</string>
     <string name="button_cancel">Cancel</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="action_track">Track</string>
 </resources>
