--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
 
     <string name="action_settings">Settings</string>
     <string name="action_track">Track</string>
+
+    <string name="tracking_latitude_label">Latitude: </string>
+    <string name="tracking_longitude_label">Longitude: </string>
 </resources>
