--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,13 +3,17 @@
     <string name="app_name">Crank</string>
     <string name="tracking_name">Tracking Activity</string>
     <string name="tracking_title">Tracking...</string>
+    <string name="tracking_service_name">Tracking Service</string>
+
     <string name="hello_world">Hello, from Crank</string>
-    <string name="button_track">Track</string>
-    <string name="button_cancel">Cancel</string>
 
     <string name="action_settings">Settings</string>
     <string name="action_track">Track</string>
 
-    <string name="tracking_latitude_label">Latitude: </string>
-    <string name="tracking_longitude_label">Longitude: </string>
+    <string name="button_record">Record</string>
+    <string name="button_pause">Pause</string>
+    <string name="button_stop">Stop</string>
+    <string name="button_cancel">Cancel</string>
+    <string name="tracking_latitude_label">Latitude</string>
+    <string name="tracking_longitude_label">Longitude</string>
 </resources>
