--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="button_pause">Pause</string>
     <string name="button_stop">Stop</string>
     <string name="button_cancel">Cancel</string>
+
+    <string name="tracking_timestamp_label">Time</string>
     <string name="tracking_latitude_label">Latitude</string>
     <string name="tracking_longitude_label">Longitude</string>
     <string name="tracking_speed_label">Speed</string>
