--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="button_stop">Stop</string>
     <string name="button_cancel">Cancel</string>
 
+    <string name="main_number_trips_label">Number of trips</string>
+
     <string name="tracking_timestamp_label">Time</string>
     <string name="tracking_latitude_label">Latitude</string>
     <string name="tracking_longitude_label">Longitude</string>
