Record button changes to resume while paused. Closes #23

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="action_track">Track</string>
 
     <string name="button_record">Record</string>
+    <string name="button_resume">Resume</string>
     <string name="button_pause">Pause</string>
     <string name="button_stop">Stop</string>
     <string name="button_cancel">Cancel</string>
