Added altitude to tracking activity, closes #19 Added min/max altitude and total climb, closes #24 Added top speed to trips table, closes #25

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="tracking_timestamp_label">Time</string>
     <string name="tracking_latitude_label">Latitude</string>
     <string name="tracking_longitude_label">Longitude</string>
+    <string name="tracking_altitude_label">Altitude</string>
     <string name="tracking_speed_label">Speed</string>
     <string name="tracking_accuracy_label">Accuracy</string>
     <string name="tracking_bearing_label">Bearing</string>
