Add total climb field to finishing activity closes #28

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="finishing_top_speed_label">Top Speed</string>
     <string name="finishing_elapsed_time_label">Elapsed Time</string>
     <string name="finishing_average_speed_label">Average Speed</string>
+    <string name="finishing_total_climb_label">Total Climb</string>
 
     <string-array name="objectives_array">
         <item>Commute to/from work</item>
