--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,11 @@
     <string name="finishing_total_climb_label">Total Climb</string>
     <string name="pref_display_units">Display Units</string>
     <string name="pref_display_units_default">English</string>
+    <string name="viewing_name">Trips</string>
+    <string name="action_view">View</string>
+
+    <string name="view_time">Time</string>
+    <string name="view_distance">Distance</string>
 
     <string-array name="objectives_array">
         <item>Commute to/from work</item>
